# kTreeInt

./: CITATION.cff  CMakeLists.txt  README.md  main.cpp
computed_bounds/: compare_type2.py  plot_all.sh  plot_bounds.py  proof_functions.py
include/: EvaluationLogger.h  ResourceMonitor.h  config.h  evaluation.h  k_sum.h  k_tree.h  observer.h  utilities.h
results/: plot.py  proof_functions.py
results/main_results/: results.csv
src/: EvaluationLogger.cpp  ResourceMonitor.cpp  config.cpp  evaluation.cpp  k_sum.cpp  k_tree.cpp  observer.cpp  utilities.cpp
